--- a/assets/layouts/footer.html
+++ b/assets/layouts/footer.html
@@ -2,21 +2,21 @@
   <div class="max-w-6xl mx-auto px-4 py-6 flex justify-center">
     <div class="flex space-x-6">
       <a
-        href="https://www.instagram.com"
+        href="https://www.instagram.com/itianclub.gndec/"
         target="_blank"
         class="hover:text-pink-400"
       >
         <i class="fab fa-instagram text-2xl"></i>
       </a>
       <a
-        href="https://www.linkedin.com"
+        href="https://www.linkedin.com/in/itian-club-gndec-17301622b/"
         target="_blank"
         class="hover:text-blue-400"
       >
         <i class="fab fa-linkedin text-2xl"></i>
       </a>
       <a
-        href="https://www.facebook.com"
+        href="https://www.facebook.com/p/ITian-Club-Gndec-100077387515984/"
         target="_blank"
         class="hover:text-blue-600"
       >
