created the events page

--- a/assets/layouts/header.html
+++ b/assets/layouts/header.html
@@ -22,12 +22,12 @@
         >Home</a
       >
       <a
-        href="./events/"
+        href="./events.html"
         class="nav-link text-gray-700 hover:text-blue-600 transition"
         >Events</a
       >
       <a
-        href="./members/"
+        href="./members.html"
         class="nav-link text-gray-700 hover:text-blue-600 transition"
         >Members</a
       >
@@ -45,12 +45,12 @@
       >Home</a
     >
     <a
-      href="./events/"
+      href="./events.html"
       class="block text-gray-700 hover:text-blue-600 transition"
       >Events</a
     >
     <a
-      href="./members/"
+      href="./members.html"
       class="block text-gray-700 hover:text-blue-600 transition"
       >Members</a
     >
