updated member pages

--- a/assets/layouts/footer.html
+++ b/assets/layouts/footer.html
@@ -22,6 +22,9 @@
       >
         <i class="fab fa-facebook text-2xl"></i>
       </a>
+      <a href="https://github.com/itianclubgndec/" class="hover:text-blue-600"
+        ><i class="fab fa-github fa-lg"></i
+      ></a>
     </div>
   </div>
   <div class="max-w-6xl mx-auto px-4 py-4 text-center border-t border-gray-700">
