updated members.html for photo change

--- a/assets/layouts/footer.html
+++ b/assets/layouts/footer.html
@@ -4,25 +4,31 @@
       <a
         href="https://www.instagram.com/itianclub.gndec/"
         target="_blank"
+        rel="noopener"
         class="hover:text-pink-400"
+        title="Visit our Instagram page"
       >
         <i class="fab fa-instagram text-2xl"></i>
       </a>
       <a
         href="https://www.linkedin.com/in/itian-club-gndec-17301622b/"
         target="_blank"
+        rel="noopener"
         class="hover:text-blue-400"
+        title="Visit our LinkedIn page"
       >
         <i class="fab fa-linkedin text-2xl"></i>
       </a>
       <a
         href="https://www.facebook.com/p/ITian-Club-Gndec-100077387515984/"
         target="_blank"
+        rel="noopener"
         class="hover:text-blue-600"
+        title="Visit our Facebook page"
       >
         <i class="fab fa-facebook text-2xl"></i>
       </a>
-      <a href="https://github.com/itianclubgndec/" class="hover:text-blue-600"
+      <a href="https://github.com/itianclubgndec/" class="hover:text-blue-600" title="Visit our GitHub page"
         ><i class="fab fa-github fa-lg"></i
       ></a>
     </div>
@@ -30,10 +36,7 @@
   <div class="max-w-6xl mx-auto px-4 py-4 text-center border-t border-gray-700">
     <p>
       &copy; 2025 - Developed and maintained by ITIAN Club
-      <a
-        href="./developers/"
-        class="nav-link text-gray-300 hover:text-blue-300"
-      >
+      <a href="./devs.html" class="nav-link text-gray-300 hover:text-blue-300">
         Technical Team
       </a>
     </p>
